made changes to the inventory page

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -12,3 +12,13 @@
     float: left;
     width: 100%;
 }
+
+.img-fluid {
+    max-width: 40%;
+}
+
+.card-body {
+    width: 30%;
+    float: left;
+    margin-left: 25px;
+}
